2009-09-14  Adam Sjøgren  <asjo@koldfront.dk>

	* spam.el (spam-unregister-on-reregister): Add boolean variable.
	(spam-resolve-registrations-routine): Use it to unregister articles
	that change status.

2009-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* parse-time.el (parse-time-syntax): Restore it to keep compatibility
	with XEmacs.
	(parse-time-string-chars): Use it.

2009-09-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* imap.el (imap-interactive-login): Better messages.
	(imap-open): Fix bug with renamed buffer on reconnect.
	(imap-authenticate): Add buffer-local imap-last-authenticator variable
	for easier debugging and cleaner code.  On successful (guessed based on
	server capabilities) secondary authentication, set imap-state
	correctly.
	(imap-last-authenticator): Define imap-last-authenticator as a variable
	to avoid warnings.

2009-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-request-article): Remove binding of
	default-enable-multibyte-characters that has gotten needless by
	the 2007-07-13 change in rfc2047-encode-message-header.

	* mml.el (mml-insert-multipart): Error on the message header.
	(mml-insert-part): Error on the message header; position point at
	the end of a MIME tag.

2009-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* time-date.el (autoload): Expand define-obsolete-function-alias into
	defalias and make-obsolete for old Emacsen that Gnus supports.
	(with-no-warnings): Define it for old Emacsen.
	(time-to-seconds): Don't use (featurep 'xemacs) to check if float-time
	is available.
	(time-to-number-of-days): Don't use (featurep 'xemacs) to check if
	float-time is available; suppress compile warning for time-to-seconds.

	* gnus-util.el (with-no-warnings): Define it for old Emacsen.
	(gnus-float-time): Alias to float-time if it exists.

	* ecomplete.el (with-no-warnings): Define it for old Emacsen.
	(ecomplete-add-item): Don't use (featurep 'xemacs) to check if